sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:7: error: not found: value n
                      for (i <- 0 to n) {
                                     ^AlgCocktailSort2:10: error: not found: value n
                      for (i<- (0 to n).reverse) {
                                     ^